--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(channel_outputs)
 export(create_full_notes)
 export(create_state_obj)
 export(daily_channel_stat)
+export(export_data_channel)
 export(extract_hashtag)
 export(extract_links)
 export(extract_mentions)
