--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ export(channel_outputs)
 export(create_full_notes)
 export(create_state_obj)
 export(daily_channel_stat)
-export(main_data_channel)
 export(extract_hashtag)
 export(extract_links)
 export(extract_mentions)
 export(fastChannelstat)
 export(getCorpus)
 export(is.retweet)
+export(main_data_channel)
 export(merge_string_vec)
 export(native_channel)
 export(notes_outputs)
@@ -29,3 +29,21 @@ export(trim_head)
 export(trim_oddchar)
 export(trim_urls)
 export(trim_users)
+importFrom(XLConnect,writeWorksheetToFile)
+importFrom(htmlwidgets,saveWidget)
+importFrom(i_graph,betweenness)
+importFrom(i_graph,closeness)
+importFrom(i_graph,degree)
+importFrom(i_graph,eigen_centrality)
+importFrom(i_graph,get.data.frame)
+importFrom(i_graph,induced.subgraph)
+importFrom(i_graph,write.graph)
+importFrom(igraph,graph.edgelist)
+importFrom(igraph,simplify)
+importFrom(lubridate,dmy_hms)
+importFrom(lubridate,hour)
+importFrom(lubridate,month)
+importFrom(networkD3,simpleNetwork)
+importFrom(qdapRegex,rm_hash)
+importFrom(qdapRegex,rm_url)
+importFrom(sjPlot,sjt.df)
