--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,12 +31,12 @@ export(trim_urls)
 export(trim_users)
 importFrom(XLConnect,writeWorksheetToFile)
 importFrom(htmlwidgets,saveWidget)
-importFrom(i_graph,betweenness)
-importFrom(i_graph,closeness)
-importFrom(i_graph,degree)
-importFrom(i_graph,eigen_centrality)
-importFrom(i_graph,get.data.frame)
-importFrom(i_graph,induced.subgraph)
+importFrom(igraph,betweenness)
+importFrom(igraph,closeness)
+importFrom(igraph,degree)
+importFrom(igraph,eigen_centrality)
+importFrom(igraph,get.data.frame)
+importFrom(igraph,induced.subgraph)
 importFrom(i_graph,write.graph)
 importFrom(igraph,graph.edgelist)
 importFrom(igraph,simplify)
