--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ importFrom(igraph,degree)
 importFrom(igraph,eigen_centrality)
 importFrom(igraph,get.data.frame)
 importFrom(igraph,induced.subgraph)
-importFrom(i_graph,write.graph)
+importFrom(igraph,write.graph)
 importFrom(igraph,graph.edgelist)
 importFrom(igraph,simplify)
 importFrom(lubridate,dmy_hms)
