--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(igraph,write.graph)
 importFrom(igraph,graph.edgelist)
 importFrom(igraph,simplify)
 importFrom(lubridate,dmy_hms)
+importFrom(lubridate,ymd_hms)
 importFrom(lubridate,hour)
 importFrom(lubridate,month)
 importFrom(networkD3,simpleNetwork)
