--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,4 +47,4 @@ importFrom(lubridate,ymd_hms)
 importFrom(networkD3,simpleNetwork)
 importFrom(qdapRegex,rm_hash)
 importFrom(qdapRegex,rm_url)
-importFrom(sjPlot,sjt.df)
+importFrom(sjPlot,tab_df)
